--- a/dbtlearn/dbt_project.yml
+++ b/dbtlearn/dbt_project.yml
@@ -33,5 +33,9 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   dbtlearn:
     # Config indicated by + and applies to all files under models/example/
-    example:
-      +materialized: view
+    src:
+      +materialized: ephemeral
+    dim:
+      +materialized: table
+    fct:
+      +tags: "fact"
