--- a/dbtlearn/models/src/_source.yml
+++ b/dbtlearn/models/src/_source.yml
@@ -1,11 +1,20 @@
 version: 2
 
 sources:
-  - name: src
+  - name: airbnb
     description: "Teh source of the staging models"
     database: 'AIRBNB'
     schema: 'RAW'
     tables:
-      - name: RAW_LISTINGS
-      - name: RAW_REVIEWS
-      - name: RAW_HOSTS
+      - name: listings
+        identifier: raw_listings
+
+      - name: hosts
+        identifier: raw_hosts
+
+      - name: reviews
+        identifier: raw_reviews
+        loaded_at_field: date
+        freshness:
+          warn_after: {count: 1, period: hour}
+          error_after: {count: 24, period: hour}
