--- a/dbtlearn/models/src/_source.yml
+++ b/dbtlearn/models/src/_source.yml
@@ -2,13 +2,20 @@ version: 2
 
 sources:
   - name: airbnb
-    description: "Teh source of the staging models"
-    database: 'AIRBNB'
-    schema: 'RAW'
+    description: "The source description"
+    schema: raw
     tables:
       - name: listings
         identifier: raw_listings
-
+        columns:
+          - name: room_type
+            tests:
+              - dbt_expectations.expect_column_distinct_count_to_equal:
+                  value: 4
+          - name: price
+            tests:
+              - dbt_expectations.expect_column_values_to_match_regex:
+                  regex: "^\\\\$[0-9][0-9\\\\.]+$"
       - name: hosts
         identifier: raw_hosts
 
