--- a/dbtlearn/packages.yml
+++ b/dbtlearn/packages.yml
@@ -5,3 +5,12 @@ packages:
 
   - package: calogica/dbt_expectations
     version: [">=0.9.0", "<0.10.0"]
+
+  - package: dbt-labs/dbt_project_evaluator
+    version: 0.8.1
+
+  - package: dbt-labs/codegen
+    version: 0.12.1
+
+  - git: "https://github.com/EqualExperts/dbt-unit-testing"
+    revision: v0.4.12
