--- a/dbtlearn/packages.yml
+++ b/dbtlearn/packages.yml
@@ -1,5 +1,4 @@
 packages:
-
   - package: dbt-labs/dbt_utils
     version: 1.1.1
 
@@ -11,6 +10,9 @@ packages:
 
   - package: dbt-labs/codegen
     version: 0.12.1
+
+  - package: dbt-labs/audit_helper
+    version: 0.10.0
 
   - git: "https://github.com/EqualExperts/dbt-unit-testing"
     revision: v0.4.12
