--- a/dbtlearn/dbt_project.yml
+++ b/dbtlearn/dbt_project.yml
@@ -1,13 +1,12 @@
-
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'dbtlearn'
-version: '1.0.0'
+name: "dbtlearn"
+version: "1.0.0"
 config-version: 2
 
 # This setting configures which "profile" dbt uses for this project.
-profile: 'dbtlearn'
+profile: "dbtlearn"
 
 # These configurations specify where dbt should look for different types of files.
 # The `model-paths` config, for example, states that models in this project can be
@@ -18,12 +17,11 @@ test-paths: ["tests"]
 seed-paths: ["seeds"]
 macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
-asset-paths: ["assets"] 
+asset-paths: ["assets"]
 
-clean-targets:         # directories to be removed by `dbt clean`
+clean-targets: # directories to be removed by `dbt clean`
   - "target"
   - "dbt_packages"
-
 
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
@@ -43,5 +41,5 @@ models:
       +materialized: table
     fct:
       +tags: "fact"
-      +database: "AWIR_{{ env_var('DBT_ENTORNO') }}_TEST"
+      +database: "AWIR_D_TEST"
       +schema: "SCH_TEST"
