--- a/.github/workflows/tutorial_gha.yml
+++ b/.github/workflows/tutorial_gha.yml
@@ -1,16 +1,10 @@
-name: Continuous Integration
-
-# on:
-#   push:
-#     branches: [main]
-#   pull_request:
-#     branches: [feature/staging]
+name: Tutorial Github Actions
 
 on: workflow_dispatch
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     timeout-minutes: 10
 
     steps:
@@ -24,8 +18,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install dbt-snowflake
 
       - name: Create dbt profile
         env:
