--- a/.github/workflows/test_dbt.yml
+++ b/.github/workflows/test_dbt.yml
@@ -1,6 +1,6 @@
 name: Test dbt
 
-on: push
+on: [push, workflow_dispatch]
 
 jobs:
   test:
@@ -15,6 +15,7 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: "3.11"
+          cache: "pip"
 
       - name: Install dependencies
         run: |
@@ -34,8 +35,4 @@ jobs:
 
       - name: Install dbt packages
         run: dbt deps
-        working-directory: ./dbtlearn
-
-      - name: Run dbt test
-        run: dbt test
         working-directory: ./dbtlearn
